force-app/main/default/objects/TURPE__mdt/TURPE__mdt.object-meta.xml
<CustomObject>
    <label>TURPE</label>
    <pluralLabel>TURPE</pluralLabel>
</CustomObject>