force-app/main/default/objects/TURPE__mdt/fields/Composant_de_Gestion__c.field-meta.xml
<CustomField>
    <fullName>Composant_de_Gestion__c</fullName>
    <label>Composant de Gestion</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>