force-app/main/default/objects/TURPE__mdt/fields/CSPV_Base__c.field-meta.xml
<CustomField>
    <fullName>CSPV_Base__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CSPV Base</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>