force-app/main/default/objects/TURPE__mdt/fields/CSPV_HCE__c.field-meta.xml
<CustomField>
    <fullName>CSPV_HCE__c</fullName>
    <label>CSPV HCE</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>