force-app/main/default/objects/TURPE__mdt/fields/CSPV_HPE__c.field-meta.xml
<CustomField>
    <fullName>CSPV_HPE__c</fullName>
    <label>CSPV HPE</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>