force-app/main/default/objects/TURPE__mdt/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>Index</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>